# lightgrad

./: CMakeLists.txt  README.md
cmake/: CMakeLists.txt
cmake/include/lightgrad/: declare.hpp  tensor.hpp
cmake/src/: operator.cpp  optimizer.cpp  tensor.cpp
example/: CMakeLists.txt
include/lightgrad/: declare.hpp  functional.hpp  lightgrad.hpp  operator.hpp  optimizer.hpp  tensor.hpp
src/: declare.hpp  functional.cpp  functional.hpp  lightgrad.hpp  main.cpp  operator.cpp  tensor.cpp  tensor.hpp
